--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "heroku-postbuild": "ng build --prod"
   },
   "private": true,
   "dependencies": {
@@ -15,6 +16,7 @@
     "@angular/cdk": "^9.2.4",
     "@angular/common": "~9.0.3",
     "@angular/compiler": "~9.0.3",
+    "@angular/compiler-cli": "^9.1.6",
     "@angular/core": "~9.0.3",
     "@angular/forms": "~9.0.3",
     "@angular/material": "^9.2.4",
@@ -27,13 +29,15 @@
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@types/chart.js": "^2.9.21",
     "chart.js": "^2.9.3",
-    "chartjs": "^0.3.24",
+    "express": "^4.17.1",
     "font-awesome": "^4.7.0",
+    "ngx-audio-player": "^9.1.0",
     "primeicons": "^4.0.0",
     "primeng": "^9.1.0",
     "prismjs": "^1.20.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
+    "typescript": "~3.7.5",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
@@ -45,6 +49,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
+    "enhanced-resolve": "^4.2.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.3.0",
@@ -56,5 +61,9 @@
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0",
     "typescript": "~3.7.5"
+  },
+  "engines": {
+    "node": "12.16.3",
+    "npm": "6.13.4"
   }
 }
