--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.901.8",
     "@angular/cli": "~9.0.4",
-    "@angular/compiler-cli": "~9.0.3",
+    "@angular/compiler-cli": "^9.1.11",
     "@angular/language-service": "~9.0.3",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
