--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.0.7",
-    "@angular/cdk": "^9.2.4",
-    "@angular/common": "~9.0.3",
+    "@angular/animations": "^9.1.4",
+    "@angular/cdk": "^9.2.1",
+    "@angular/cli": "^9.1.5",
+    "@angular/common": "~9.0.5",
     "@angular/compiler": "~9.0.3",
     "@angular/compiler-cli": "^9.1.6",
     "@angular/core": "~9.0.3",
+    "@angular/flex-layout": "^9.0.0-beta.30",
     "@angular/forms": "~9.0.3",
-    "@angular/material": "^9.2.4",
-    "@angular/platform-browser": "~9.0.3",
+    "@angular/localize": "^9.0.5",
+    "@angular/material": "^9.2.1",
+    "@angular/platform-browser": "^9.0.7",
     "@angular/platform-browser-dynamic": "~9.0.3",
     "@angular/router": "~9.0.3",
     "@fortawesome/angular-fontawesome": "^0.6.1",
@@ -41,9 +44,9 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.901.8",
-    "@angular/cli": "~9.0.4",
-    "@angular/compiler-cli": "^9.1.11",
+    "@angular-devkit/build-angular": "~0.900.4",
+    "@angular/cli": "^9.1.5",
+    "@angular/compiler-cli": "^9.1.6",
     "@angular/language-service": "~9.0.3",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
@@ -63,7 +66,7 @@
     "typescript": "~3.7.5"
   },
   "engines": {
-    "node": "12.16.3",
+    "node": "12.16.0",
     "npm": "6.13.4"
   }
 }
