--- a/package.json
+++ b/package.json
@@ -15,17 +15,17 @@
     "@angular/animations": "^9.1.4",
     "@angular/cdk": "^9.2.1",
     "@angular/cli": "^9.1.5",
-    "@angular/common": "~9.0.5",
-    "@angular/compiler": "~9.0.3",
+    "@angular/common": "~9.1.11",
+    "@angular/compiler": "~9.1.11",
     "@angular/compiler-cli": "^9.1.6",
-    "@angular/core": "~9.0.3",
+    "@angular/core": "~9.1.11",
     "@angular/flex-layout": "^9.0.0-beta.30",
-    "@angular/forms": "~9.0.3",
+    "@angular/forms": "~9.1.11",
     "@angular/localize": "^9.0.5",
     "@angular/material": "^9.2.1",
     "@angular/platform-browser": "^9.0.7",
-    "@angular/platform-browser-dynamic": "~9.0.3",
-    "@angular/router": "~9.0.3",
+    "@angular/platform-browser-dynamic": "~9.1.11",
+    "@angular/router": "~9.1.11",
     "@fortawesome/angular-fontawesome": "^0.6.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-regular-svg-icons": "^5.13.0",
@@ -34,20 +34,21 @@
     "chart.js": "^2.9.3",
     "express": "^4.17.1",
     "font-awesome": "^4.7.0",
+    "howler": "^2.2.0",
     "ngx-audio-player": "^9.1.0",
     "primeicons": "^4.0.0",
     "primeng": "^9.1.0",
     "prismjs": "^1.20.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
-    "typescript": "~3.7.5",
+    "typescript": "~3.8.3",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.900.4",
     "@angular/cli": "^9.1.5",
     "@angular/compiler-cli": "^9.1.6",
-    "@angular/language-service": "~9.0.3",
+    "@angular/language-service": "~9.1.11",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
@@ -63,7 +64,7 @@
     "protractor": "~5.4.3",
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0",
-    "typescript": "~3.7.5"
+    "typescript": "~3.8.3"
   },
   "engines": {
     "node": "12.16.0",
