--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.13.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@types/chart.js": "^2.9.21",
+    "@zxing/ngx-scanner": "^3.0.0",
     "chart.js": "^2.9.3",
     "express": "^4.17.1",
     "font-awesome": "^4.7.0",
