--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@types/chart.js": "^2.9.21",
     "@zxing/ngx-scanner": "^3.0.0",
+    "bootstrap": "^4.5.0",
     "chart.js": "^2.9.3",
     "express": "^4.17.1",
     "font-awesome": "^4.7.0",
     "howler": "^2.2.0",
+    "jsqr": "^1.3.1",
     "ngx-audio-player": "^9.1.0",
     "primeicons": "^4.0.0",
     "primeng": "^9.1.0",
